# rag-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PLAN_ADD_PROVIDERS.md  README.md  SOLID_REFACTORING_PLAN.md  docker-compose.yml  evaluation_logs.json  pyproject.toml
functional-testing/: create_a_software_tool_qualification_pla.md  create_a_tool_qualification_process_repo.md  does_lcov_qualify_as_per_iso_26262_based.md  failed_create_a_tool_qualification_process_repo.md  first-tqp.md  what_is_the_process_for_creating_tool_qu.md  what_is_the_process_for_creating_tool_qu_wt_eval.md  without_rag.md
graphify-out/: .graphify_ast.json  .graphify_detect.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
src/: README.md  app.py  config.py
src/rag_core/: __init__.py  llm.py
src/ragapp/: .env.example  __init__.py  app.py  config.py  config_provider.py
src/ragapp/core/: __init__.py  embedding_function.py  embedding_manager.py  evaluator.py  hybrid_retriever.py  keyword_search.py  llm.py  parser.py  retriever.py  vector_store.py
src/ragapp/core/parsers/: __init__.py  base.py  (+4 more)
src/ragapp/ui/: builder_tab.py  db_tab.py  evaluation_tab.py  query_tab.py  sidebar.py
tests/: conftest.py  test_anthropic_provider.py  test_config_provider.py  test_db_tab.py  test_embedding_manager.py  test_evaluator.py  test_gemini_provider.py  test_huggingface_provider.py  test_hybrid_retriever.py  test_keyword_search.py  test_llm.py  test_llm_routing.py  test_lm_studio_provider.py  test_ollama_provider.py  test_openai_provider.py  test_parser.py  test_parsers_base.py  test_provider_base.py  test_provider_catalog.py  test_retriever.py  test_sidebar.py  test_ui_tabs.py  test_vector_store.py
(+11 files in other folders)
