[project]
name = "rag-app"
version = "0.1.0"
description = "A local persistent RAG web app built with Streamlit and ChromaDB"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.33.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=2.3.0",
  "openai>=1.30.0",
  "anthropic>=0.29.0",
  "google-genai>=0.3.0",
  "pypdf>=4.0.0",
  "python-docx>=0.8.11",
  "pandas>=2.2.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tiktoken>=0.7.0",
]
