[project]
name = "rag-app"
version = "0.1.0"
description = "A local persistent RAG web app built with Streamlit and ChromaDB"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.33.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=2.3.0",
  "openai>=1.30.0",
  "anthropic>=0.29.0",
  "google-genai>=0.3.0",
  "pypdf>=4.0.0",
  "python-docx>=0.8.11",
  "pandas>=2.2.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "tiktoken>=0.7.0",
]

[project.scripts]
rag-app = "streamlit.web.cli:main"

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "ruff>=0.9.0",
  "ty>=0.0.1a25",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E501"]
"tests/test_parser.py" = ["E501", "F401"]
"src/ragapp/app.py" = ["E501", "I001", "E702"]
"src/ragapp/core/llm.py" = ["E501"]
"src/ragapp/config.py" = ["E501"]
"src/ragapp/core/parser.py" = ["E501"]
"src/ragapp/core/vector_store.py" = ["E501"]
